# payments-engine

./: Cargo.toml  README.md  ai-prompts.md
src/: account.rs  engine.rs  error.rs  lib.rs  main.rs  reader.rs  transaction.rs  types.rs  writer.rs
tests/: engine_tests.rs
tests/fixtures/: 03_dispute_and_chargeback.csv  04_insufficient_funds.csv  06_multiple_clients.csv  07_whitespace.csv  08_precision.csv  09_ignore_bad_refs.csv
