[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "payments-engine"
path = "src/main.rs"

[dependencies]
csv          = "1"
serde        = { version = "1", features = ["derive"] }
rust_decimal         = { version = "1", features = ["serde-str"] }
rust_decimal_macros  = "1"
thiserror    = "2"
anyhow       = "1"

[dev-dependencies]
pretty_assertions = "1"
